--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CinemaHub_LookNFeel"
         tools:targetApi="31">
+
+<!--        &lt;!&ndash; Login Testing: &ndash;&gt;-->
+<!--        <activity-->
+<!--            android:name=".LoginActivity"-->
+<!--            android:exported="false">-->
+<!--            <meta-data-->
+<!--                android:name="android.app.lib_name"-->
+<!--                android:value="" />-->
+<!--        </activity>-->
+<!--        <activity-->
+<!--            android:name=".MainActivity"-->
+<!--            android:exported="true">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
+
         <activity
             android:name=".MovieSelectionActivity"
             android:exported="true">
@@ -25,6 +44,9 @@
         <activity
             android:name=".MovieDetailsActivity"
             android:parentActivityName=".MovieSelectionActivity" />
+        <activity
+            android:name=".MovieSeatingChartActivity"
+            android:parentActivityName=".MovieDetailsActivity" />
     </application>
 
 </manifest>
