--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
             android:value="YOUR_API_KEY" />
 
         <activity
-            android:name=".MapsActivity"
+            android:name=".fragment.MapsActivity"
             android:exported="false"
             android:label="@string/title_activity_maps" />
         <!-- &lt;!&ndash; Login Testing: &ndash;&gt; -->
