Messing around with the permissions and map

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,10 +18,7 @@
         android:theme="@style/Theme.CinemaHub_LookNFeel"
         tools:targetApi="31">
 
-        <!--
-             TODO: Before you run your application, you need a Google Maps API key.
-
-             To get one, follow the directions here:
+        <!--To get one, follow the directions here:
 
                 https://developers.google.com/maps/documentation/android-sdk/get-api-key
 
